--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,11 +1,10 @@
 ---
-
-- name: "configuration play." 
+- name: 'configuration play.'
   hosts: web
   user: ubuntu
   become: true
   become_method: sudo
-  become_user: root  
+  become_user: root
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
@@ -13,18 +12,15 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - name: "wait 600 seconds for target connection to become reachable/usable."
+    - name: 'wait 600 seconds for target connection to become reachable/usable.'
       wait_for_connection:
-        timeout: 600
 
-    - name: "install python for Ansible."
-      become: yes
+    - name: 'install python for Ansible.'
       apt:
-        name: ["python3"]
+        name: python3
         state: latest
         update_cache: yes
 
-  # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - NODE_ENV: production
     - ENVIRONMENT: production
