--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,28 +3,33 @@ version: 2.1
 # orbs:
 #   slack: circleci/slack@4.1
 
+parameters:
+  workflow_id:
+    type: string
+    default: '${CIRCLE_WORKFLOW_ID:0:7}'
+
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      id:
-        type: string 
+      workflow_id:
+        type: string
+        # default: ${CIRCLE_WORKFLOW_ID}
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name backend-stack-${CIRCLE_WORKFLOW_ID:0:7}
-            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-            aws cloudformation delete-stack --stack-name frontend-stack-${CIRCLE_WORKFLOW_ID:0:7}
-      # - slack/notify:
-      #     event: pass
-      #     template: basic_fail_1
+            aws cloudformation delete-stack \
+            --stack-name udapeople-backend-<<parameters.workflow_id>>
+            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+            aws cloudformation delete-stack \
+            --stack-name udapeople-frontend-<<parameters.workflow_id>>
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
-      id:
+      workflow_id:
         type: string
     steps:
       - run:
@@ -35,7 +40,7 @@ commands:
             npm install
             npm run build
             npm run migrations:revert
-            
+
 jobs:
   build-frontend:
     docker:
@@ -53,7 +58,6 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -70,7 +74,6 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-
   test-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -79,12 +82,11 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Test front-end
+          name: Run frontend test
           command: |
             cd frontend
             npm install
             npm run test
-                
   test-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -93,12 +95,11 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Test back-end
+          name: Run backend test
           command: |
             cd backend
             npm install
             npm run test
-            
   scan-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -107,13 +108,12 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Analyze front-end
+          name: Analyse frontend
           command: |
             cd frontend
             npm install
-            npm update
-            npm audit fix --audit-level=critical --force 
-
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -122,17 +122,16 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Analyze back-end
+          name: Analyse backend
           command: |
-            cd backend
-            npm update
+            cd frontend
+            npm install
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       # - slack/notify:
       #     event: fail
       #     template: basic_fail_1
-
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -146,7 +145,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=your-tag \
               --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} 
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -154,7 +153,7 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --tags project=your-tag \
               --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}   
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
       - run:
           name: Add back-end ip to ansible inventory
           command: |
@@ -167,25 +166,25 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}   
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   configure-infrastructure:
     docker:
       - image: python:3.7-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["ec:ee:03:33:13:fc:ea:71:6d:29:46:13:dd:2a:42:36"]
-      - attach_workspace:
-          at: ~/
+          fingerprints:
+            - 'ec:ee:03:33:13:fc:ea:71:6d:29:46:13:dd:2a:42:36'
       - run:
           name: Install dependencies
           command: |
-            cd ~/project/.circleci/ansible
             apk add --update --no-cache tar gzip ansible aws-cli
+      - attach_workspace:
+          at: ~/
       - run:
           name: Configure server
           command: |
+            # add environment variables to server
             echo ENVIRONMENT=production > backend/.env
             echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
@@ -204,11 +203,10 @@ jobs:
           paths:
             - project/backend
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}     
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0 # safest to use to avoid migration errors
     steps:
       - checkout
       - run:
@@ -220,6 +218,8 @@ jobs:
             sudo ./aws/install
       - restore_cache:
           keys: [backend-build]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
@@ -233,8 +233,7 @@ jobs:
               curl --insecure https://kvdb.io/ViWzkdySLpmD9TMMzU5Fzq/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}      
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   deploy-frontend:
     docker:
       - image: python:3.7-alpine3.16
@@ -244,6 +243,8 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update --no-cache tar gzip nodejs npm aws-cli
+      - restore_cache:
+          keys: [frontend-build]
       - run:
           name: Get backend url
           command: |
@@ -264,38 +265,25 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
-                    
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   deploy-backend:
     docker:
       - image: python:3.7-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["ec:ee:03:33:13:fc:ea:71:6d:29:46:13:dd:2a:42:36"]
-      - attach_workspace:
-          at: ~/
-      - restore_cache:
-          keys: [backend-build]
+          fingerprints:
+            - 'ec:ee:03:33:13:fc:ea:71:6d:29:46:13:dd:2a:42:36'
       - run:
           name: Install dependencies
           command: |
-            ls
-            # cd backend
-            # echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-            # echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-            # echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-            # echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-            # echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-            # echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-            # echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-            # echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-            # echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
             apk add --update --no-cache tar gzip nodejs npm aws-cli ansible
-            # apk add --update ansible nodejs npm rsync openssh
-            # pip install awscli
+      - restore_cache:
+          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Deploy backend
           command: |
@@ -310,34 +298,31 @@ jobs:
             echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.16 
+      - image: python:3.7-alpine3.16
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
             apk add --update --no-cache curl aws-cli nodejs npm
+      # - attach_workspace:
+      #     at: ~/
       - run:
-          name: Backend smoke test.
+          name: Backend smoke test
           command: |
+            # export BACKEND_IP=$(tail ~/project/.circleci/ansible/inventory.txt)
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL
-            cat backend/.env
-            sudo netstat -tulpn | grep -w 3030
-            pm2 logs
-            if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 1; fi
+            if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 0; fi
       - run:
           name: Frontend smoke test.
           command: |
@@ -345,10 +330,9 @@ jobs:
             echo $URL
             if curl ${URL} | grep "Welcome"; then return 0; else return 1; fi
       # - destroy-environment:
-      #     id: ${CIRCLE_WORKFLOW_ID:0:7} 
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # - revert-migrations:
-      #     id: ${CIRCLE_WORKFLOW_ID:0:7}
-
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   cloudfront-update:
     docker:
       - image: circleci/node:13.8.0
@@ -367,31 +351,25 @@ jobs:
             export OldWorkflowID=$(aws cloudformation list-exports \
             --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            # aws cloudformation deploy \
-            # --template-file .circleci/files/cloudfront.yml \
-            # --stack-name InitialStack \
-            # --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
-            # --tags project=udapeople
             aws cloudformation deploy \
-              --template-file .circleci/files/cloudfront.yml \
-              --stack-name InitialStack \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --tags project=udapeople
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
+            --tags project=udapeople
       - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   cleanup:
     docker:
       - image: amazon/aws-cli
     steps:
-      - checkout  
+      - checkout
       - run:
           name: Get old stack workflow id and remove stacks
           command: |
-            echo ${CIRCLE_WORKFLOW_ID:0:7}
-            export OldWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
+            echo <<pipeline.parameters.workflow_id>>
+            export OldWorkflowID=<<pipeline.parameters.workflow_id>>
             export STACKS=$(aws cloudformation list-stacks \
             --query "StackSummaries[*].StackName" \
             --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
@@ -402,25 +380,51 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             fi
-            
+  # add-prometheus-node-exporter:
+  #   docker:
+  #     - image: python:3.7-alpine3.16
+  #   steps:
+  #     - checkout
+  #     - add_ssh_keys:
+  #         fingerprints:
+  #           - 'ab:52:25:68:df:4c:3a:d5:48:18:55:d8:f9:3b:df:de'
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update aws-cli tar gzip ansible nodejs npm
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Setup Prometheus Node Exporter
+  #         command: |
+  #           cd .circleci/ansible
+  #           cat inventory.txt
+  #           ansible-playbook -i inventory.txt node-exporter.yml
+  #     - destroy-environment:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  #     - revert-migrations:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       - deploy-infrastructure:
-          # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [develop]
+              only: [test]
+      # - add-prometheus-node-exporter:
+      #     requires: [deploy-infrastructure]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
@@ -434,4 +438,4 @@ workflows:
       - cloudfront-update:
           requires: [smoke-test]
       # - cleanup:
-      #     requires: [cloudfront-update]
+      #     requires: [cloudfront-update, add-prometheus-node-exporter]
