--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -424,10 +424,10 @@ workflows:
           filters:
             branches:
               only: [test]
-      - add-prometheus-node-exporter:
-          requires: [deploy-infrastructure]
+      # - add-prometheus-node-exporter:
+      #     requires: [deploy-infrastructure]
       - configure-infrastructure:
-          requires: [add-prometheus-node-exporter]
+          requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
       - deploy-frontend:
